--- a/css/main.css
+++ b/css/main.css
@@ -70,7 +70,33 @@ p{
   color: black;
 }
 
-body {font-family: Arial, Helvetica, sans-serif;}
+.deliver{
+  color: #fff;
+      background-color: pink;
+      border-color: #28a745;
+
+
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 0.25rem;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.delivernot{
+  color: #fff;
+      background-color: aqua;
+      border-color: #28a745;
+
+
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 0.25rem;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
 
 /* The Modal (background) */
 .modal {
