--- a/css/main.css
+++ b/css/main.css
@@ -84,7 +84,7 @@ p{
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
-.delivernot{
+.pickup{
   color: #fff;
       background-color: aqua;
       border-color: #28a745;
