--- a/css/main.css
+++ b/css/main.css
@@ -160,7 +160,8 @@ p{
   color: white;
 }
 
-.modal-body {padding: 2px 16px;}
+.modal-body {padding: 2px 16px;
+background-color: gray}
 
 h4{
   text-align: center;
