--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,11 @@
+@media screen and (min-width: 480px) {
+    body {
+        background-color: black;
+        color: white;
+    }
+}
+
+
 html, body{
   font-size: 20px;
 }
