--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@
 
 html, body{
   font-size: 20px;
+  background-color: black;
 }
 body {font-family: Arial, Helvetica, sans-serif;}
 
@@ -31,6 +32,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 #menu{
   color:gray;
+  background-color: black;
 }
 
 /*menu.html*/
