--- a/css/main.css
+++ b/css/main.css
@@ -107,7 +107,19 @@ p{
     border-radius: 0.25rem;
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
-
+.foot{
+    text-align: center;
+    margin-top: 50px;
+}
+#contact-us{
+  color: white;
+  text-align: center;
+  background:url("../images/back.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 900px;
+  width:100%;
+}
 /* The Modal (background) */
 .modal {
   display: none; /* Hidden by default */
