--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@
 
 html, body{
   font-size: 20px;
+  background-color: black;
 }
 body {font-family: Arial, Helvetica, sans-serif;}
 
@@ -31,6 +32,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 #menu{
   color:gray;
+  background-color: black;
 }
 
 /*menu.html*/
@@ -105,7 +107,19 @@ p{
     border-radius: 0.25rem;
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
-
+.foot{
+    text-align: center;
+    margin-top: 50px;
+}
+#contact-us{
+  color: white;
+  text-align: center;
+  background:url("../images/back.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 900px;
+  width:100%;
+}
 /* The Modal (background) */
 .modal {
   display: none; /* Hidden by default */
