--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 480px) {
+/* media query */@media screen and (min-width: 480px) {
     body {
         background-color: black;
         color: white;
