--- a/css/main.css
+++ b/css/main.css
@@ -94,6 +94,10 @@ p{
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
+.summary-data{
+  display: none;
+}
+
 .pickup{
   color: #fff;
       background-color: aqua;
