--- a/css/main.css
+++ b/css/main.css
@@ -94,7 +94,7 @@ p{
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
-.summary-data{
+.order-summary{
   display: none;
 }
 
